// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stake reducer addressinfo 1`] = `
Object {
  "addressInfo": Object {},
  "allowance": 1000,
  "boundaries": Array [],
  "currentRoundInfo": Array [],
  "duo": 1000,
  "exchangePrices": Array [],
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "stakingEnabled": false,
    "totalAwardsToDistribute": 0,
    "totalRewardsToDistribute": 0,
  },
  "userAward": 0,
}
`;

exports[`stake reducer boundaries 1`] = `
Object {
  "addressInfo": Object {},
  "allowance": 1000,
  "boundaries": Array [],
  "currentRoundInfo": Array [],
  "duo": 1000,
  "exchangePrices": Array [],
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "stakingEnabled": false,
    "totalAwardsToDistribute": 0,
    "totalRewardsToDistribute": 0,
  },
  "userAward": 0,
}
`;

exports[`stake reducer currentround 1`] = `
Object {
  "addressInfo": Object {},
  "allowance": 1000,
  "boundaries": Array [],
  "currentRoundInfo": Array [],
  "duo": 1000,
  "exchangePrices": Array [],
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "stakingEnabled": false,
    "totalAwardsToDistribute": 0,
    "totalRewardsToDistribute": 0,
  },
  "userAward": 0,
}
`;

exports[`stake reducer default 1`] = `
Object {
  "addressInfo": Object {},
  "allowance": 0,
  "boundaries": Array [],
  "currentRoundInfo": Array [],
  "duo": 0,
  "exchangePrices": Array [],
  "states": Object {
    "lockMinTimeInSecond": 0,
    "maxStakePerOracle": 0,
    "minStakeAmt": 0,
    "stakingEnabled": false,
    "totalRewardsToDistribute": 0,
  },
  "userAward": 0,
}
`;

exports[`stake reducer price 1`] = `
Object {
  "addressInfo": Object {},
  "allowance": 1000,
  "boundaries": Array [],
  "currentRoundInfo": Array [],
  "duo": 1000,
  "exchangePrices": Array [],
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "stakingEnabled": false,
    "totalAwardsToDistribute": 0,
    "totalRewardsToDistribute": 0,
  },
  "userAward": 0,
}
`;

exports[`stake reducer stakeAllowance 1`] = `
Object {
  "addressInfo": Object {},
  "allowance": 1000,
  "boundaries": Array [],
  "currentRoundInfo": Array [],
  "duo": 1000,
  "exchangePrices": Array [],
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "stakingEnabled": false,
    "totalAwardsToDistribute": 0,
    "totalRewardsToDistribute": 0,
  },
  "userAward": 0,
}
`;

exports[`stake reducer stakeBalance 1`] = `
Object {
  "addressInfo": Object {},
  "allowance": 0,
  "boundaries": Array [],
  "currentRoundInfo": Array [],
  "duo": 1000,
  "exchangePrices": Array [],
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "stakingEnabled": false,
    "totalAwardsToDistribute": 0,
    "totalRewardsToDistribute": 0,
  },
  "userAward": 0,
}
`;

exports[`stake reducer stakeStates 1`] = `
Object {
  "addressInfo": Object {},
  "allowance": 0,
  "boundaries": Array [],
  "currentRoundInfo": Array [],
  "duo": 0,
  "exchangePrices": Array [],
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "stakingEnabled": false,
    "totalAwardsToDistribute": 0,
    "totalRewardsToDistribute": 0,
  },
  "userAward": 0,
}
`;

exports[`stake reducer stakeSub Off 1`] = `
Object {
  "addressInfo": Object {},
  "allowance": 1000,
  "boundaries": Array [],
  "currentRoundInfo": Array [],
  "duo": 1000,
  "exchangePrices": Array [],
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "stakingEnabled": false,
    "totalAwardsToDistribute": 0,
    "totalRewardsToDistribute": 0,
  },
  "userAward": 0,
}
`;

exports[`stake reducer stakeSub On 1`] = `
Object {
  "addressInfo": Object {},
  "allowance": 1000,
  "boundaries": Array [],
  "currentRoundInfo": Array [],
  "duo": 1000,
  "exchangePrices": Array [],
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "stakingEnabled": false,
    "totalAwardsToDistribute": 0,
    "totalRewardsToDistribute": 0,
  },
  "userAward": 0,
}
`;

exports[`stake reducer userAward 1`] = `
Object {
  "addressInfo": Object {},
  "allowance": 1000,
  "boundaries": Array [],
  "currentRoundInfo": Array [],
  "duo": 1000,
  "exchangePrices": Array [],
  "states": Object {
    "canStake": false,
    "canUnstake": false,
    "lockMinTimeInSecond": 300,
    "maxStakePerOracle": 100000,
    "minStakeAmt": 500,
    "stakingEnabled": false,
    "totalAwardsToDistribute": 0,
    "totalRewardsToDistribute": 0,
  },
  "userAward": 0,
}
`;
